--- a/springboot-dubbo-customer/pom.xml
+++ b/springboot-dubbo-customer/pom.xml
@@ -3,20 +3,18 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>moon</groupId>
-	<artifactId>springboot-neo4j</artifactId>
+	<artifactId>springboot-dubbo-customer</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>springboot-neo4j</name>
+	<name>springboot-dubbo-customer</name>
 	<url>http://maven.apache.org</url>
 
-	<!-- 加父工程 -->
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<!-- <version>2.0.3.RELEASE</version> -->
-		<version>1.5.9.RELEASE</version>
-		<relativePath />
+		<version>2.0.3.RELEASE</version>
+		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 
 	<properties>
@@ -26,44 +24,54 @@
 	</properties>
 
 	<dependencies>
+		<!--接口包 -->
+		<dependency>
+			<groupId>moon</groupId>
+			<artifactId>springboot-dubbo-interface</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-data-rest</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-data-neo4j</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.neo4j</groupId>
-			<artifactId>neo4j-ogm-http-driver</artifactId>
-		</dependency>
 
 		<dependency>
-			<groupId>com.voodoodyne.jackson.jsog</groupId>
-			<artifactId>jackson-jsog</artifactId>
-			<version>1.1</version>
-			<scope>compile</scope>
+			<groupId>org.mybatis.spring.boot</groupId>
+			<artifactId>mybatis-spring-boot-starter</artifactId>
+			<version>1.3.2</version>
+		</dependency>
+		
+
+
+		<!--dubbo的启动包 -->
+		<dependency>
+			<groupId>com.alibaba.spring.boot</groupId>
+			<artifactId>dubbo-spring-boot-starter</artifactId>
+			<version>2.0.0</version>
+		</dependency>
+		<!--zookeeper驱动包 -->
+		<!-- https://mvnrepository.com/artifact/com.101tec/zkclient -->
+		<dependency>
+			<groupId>com.101tec</groupId>
+			<artifactId>zkclient</artifactId>
+			<version>0.10</version>
+		</dependency>
+
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+			<scope>test</scope>
 		</dependency>
 	</dependencies>
-	<build>
-		<finalName>springboot-web</finalName>
 
+	<build>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
-				<executions>
-					<execution>
-						<goals>
-							<goal>repackage</goal>
-						</goals>
-					</execution>
-				</executions>
 			</plugin>
 		</plugins>
 		<!--配置打包的参数 -->
@@ -88,7 +96,5 @@
 				</includes>
 			</resource>
 		</resources>
-
-
 	</build>
 </project>
