添加filter、servlet、interceptor相关内容

--- a/springboot-web/src/main/resources/application-dev.properties
+++ b/springboot-web/src/main/resources/application-dev.properties
@@ -2,3 +2,10 @@
 server.port=8080
 
 server.servlet.context-path=/springboot-web
+
+#spring.http.encoding.enabled=false
+
+spring.http.encoding.charset=GBK
+spring.http.encoding.enabled=true
+spring.http.encoding.force=true
+
