--- a/springcloud-example-all/springcloud-example-consumer-dept-feign/src/main/resources/application.properties
+++ b/springcloud-example-all/springcloud-example-consumer-dept-feign/src/main/resources/application.properties
@@ -3,6 +3,10 @@ server.port=9999
 
 
 
+
+#\u5f00\u542f\u7194\u65ad\u5904\u7406
+feign.hystrix.enabled=true
+
 #\u4e0d\u5411\u6ce8\u518c\u4e2d\u5fc3\u6ce8\u518c\u81ea\u5df1
 eureka.client.register-with-eureka=false
 #\u4ea4\u4e92\u67e5\u8be2\u7684\u5730\u5740
