--- a/springcloud-example-all/pom.xml
+++ b/springcloud-example-all/pom.xml
@@ -144,5 +144,6 @@
 		<module>springcloud-example-provier-hystrix-dashboard</module>
 		<module>springcloud-example-consumer-hystrix-dashboard</module>
 		<module>springcloud-example-zuul-getway</module>
+		<module>springcloud-example-config-3344</module>
 	</modules>
 </project>
